Fix uneven icon line heights. Check releated docs
for more info check docs/subpixel_artifacts.md

--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,7 @@ body {
 }
 
 .header .nav .icon span {
-  background-color: #333;
-  height: 1px;
+  border-bottom: 2px solid #222;
   width: 100%;
   margin-bottom: 6px;
 }
